--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: ztable
 Title: Creating Zebra Striping Tables in Both Latex and HTML Formats
 Version: 0.1.0
-Authors@R: "Keon-Woong Moon <cardiomoon@gmail.comm> [aut, cre]"
+Authors@R: "Keon-Woong Moon <cardiomoon@gmail.com> [aut, cre]"
 Description: Creating zebra striping tables(tables with alternating row colors)
     in both Latex and html formats easily from a data.frame or an
     R object such as matrix, lm, aov, anova, glm and coxph objects.
