--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,11 @@
 Package: ztable
 Title: Zebra-Striped Tables in LaTeX and HTML Formats
 Version: 0.1.4
-Authors@R: "Keon-Woong Moon <cardiomoon@gmail.com> [aut, cre]"
+Authors@R: person("Keon-Woong","Moon", email="cardiomoon@gmail.com",
+    role=c("aut", "cre"))
 Description: Makes zebra-striped tables (tables with alternating row colors)
     in LaTeX and HTML formats easily from a data.frame, matrix, lm, aov, anova,
-    glm or coxph objects.
+    glm, coxph, mytable and cbind.mytable objects.
 Depends:
     R (>= 3.1.2)
 License: GPL-2
@@ -13,5 +14,6 @@ Suggests:
     MASS,
     survival,
     testthat,
-    knitr
+    knitr,
+    moonBook
 VignetteBuilder: knitr
