--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,1 +1,15 @@
 exportPattern("^[^\\.]")
+
+S3method(ztable,anova)
+S3method(ztable,aov)
+S3method(ztable,coxph)
+S3method(ztable,data.frame)
+S3method(ztable,default)
+S3method(ztable,glm)
+S3method(ztable,lm)
+S3method(ztable,matrix)
+S3method(ztable,prcomp)
+S3method(ztable,summary.prcomp)
+S3method(ztable,mytable)
+S3method(ztable,cbind.mytable)
+S3method(print,ztable)
