--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,4 +12,6 @@ S3method(ztable,prcomp)
 S3method(ztable,summary.prcomp)
 S3method(ztable,mytable)
 S3method(ztable,cbind.mytable)
+S3method(ztable,nls)
+S3method(ztable,fitdistr)
 S3method(print,ztable)
