--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: ztable
 Title: Zebra-Striped Tables in LaTeX and HTML Formats
-Version: 0.1.5
+Version: 0.1.6
 Authors@R: person("Keon-Woong","Moon", email="cardiomoon@gmail.com",
     role=c("aut", "cre"))
 Description: Makes zebra-striped tables (tables with alternating row colors)
@@ -9,11 +9,13 @@ Description: Makes zebra-striped tables (tables with alternating row colors)
 Depends:
     R (>= 3.1.2)
 License: GPL-2
+URL: http://github.com/cardiomoon/ztable
 LazyData: true
 Suggests:
     MASS,
     survival,
     testthat,
     knitr,
-    moonBook
+    moonBook,
+    magrittr
 VignetteBuilder: knitr
