--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ S3method(ztable,prcomp)
 S3method(ztable,summary.prcomp)
 export(addCellColor)
 export(addColColor)
+export(addFrontColor)
 export(addRowColor)
 export(addSigColor)
 export(addSubColNames)
