--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,15 +23,25 @@ export(addSigColor)
 export(addSubColNames)
 export(addcgroup)
 export(addrgroup)
+export(align2html)
+export(align2lines)
+export(alignCheck)
+export(alignCount)
 export(cGroupSpan)
 export(colGroupCount)
+export(extractAlign)
 export(getNewAlign)
 export(getspanRowLength)
 export(hlines)
+export(isGroupCol)
+export(myhtmlStyle)
 export(parallelTables)
+export(printHTMLHead)
+export(printLatexHead)
 export(spanCol)
 export(spanRow)
 export(update_ztable)
+export(vline2align)
 export(vlines)
 export(ztable)
 importFrom(stats,coef)
