--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ export(alignCheck)
 export(alignCount)
 export(cGroupSpan)
 export(colGroupCount)
+export(define_colors)
 export(extractAlign)
 export(getNewAlign)
 export(getspanRowLength)
