--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,7 +30,6 @@ export(alignCount)
 export(cGroupSpan)
 export(colGroupCount)
 export(define_colors)
-export(extractAlign)
 export(getNewAlign)
 export(getspanRowLength)
 export(hlines)
@@ -48,3 +47,5 @@ export(ztable)
 importFrom(stats,coef)
 importFrom(stats,confint.default)
 importFrom(stats,formula)
+importFrom(stringr,fixed)
+importFrom(stringr,str_remove_all)
