--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,6 +44,7 @@ export(update_ztable)
 export(vline2align)
 export(vlines)
 export(ztable)
+importFrom(magrittr,"%>%")
 importFrom(stats,coef)
 importFrom(stats,confint.default)
 importFrom(stats,formula)
