--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,24 +29,47 @@ export(alignCheck)
 export(alignCount)
 export(cGroupSpan)
 export(colGroupCount)
+export(color2hex)
+export(data2table)
 export(define_colors)
 export(getNewAlign)
+export(getNewSpanCol)
 export(getspanRowLength)
 export(hlines)
 export(isGroupCol)
 export(myhtmlStyle)
+export(palette2colors)
 export(parallelTables)
 export(printHTMLHead)
 export(printLatexHead)
+export(roundDf)
 export(spanCol)
 export(spanRow)
 export(update_ztable)
 export(vline2align)
 export(vlines)
 export(ztable)
+export(ztable2flextable)
+export(ztable_sub)
+importFrom(RColorBrewer,brewer.pal)
+importFrom(RColorBrewer,brewer.pal.info)
+importFrom(flextable,align)
+importFrom(flextable,bg)
+importFrom(flextable,border)
+importFrom(flextable,color)
+importFrom(flextable,delete_part)
+importFrom(flextable,merge_at)
+importFrom(flextable,merge_h)
+importFrom(flextable,padding)
+importFrom(flextable,regulartable)
+importFrom(flextable,set_header_df)
+importFrom(grDevices,col2rgb)
 importFrom(magrittr,"%>%")
+importFrom(officer,fp_border)
 importFrom(stats,coef)
 importFrom(stats,confint.default)
 importFrom(stats,formula)
 importFrom(stringr,fixed)
+importFrom(stringr,str_detect)
+importFrom(stringr,str_flatten)
 importFrom(stringr,str_remove_all)
