--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ S3method(ztable,mytable)
 S3method(ztable,nls)
 S3method(ztable,prcomp)
 S3method(ztable,summary.prcomp)
+S3method(ztable,table)
 export(addCellColor)
 export(addColColor)
 export(addFrontColor)
@@ -35,8 +36,10 @@ export(define_colors)
 export(getNewAlign)
 export(getNewSpanCol)
 export(getspanRowLength)
+export(gradientColor)
 export(hlines)
 export(isGroupCol)
+export(makeHeatmap)
 export(myhtmlStyle)
 export(palette2colors)
 export(parallelTables)
@@ -66,6 +69,8 @@ importFrom(flextable,set_header_df)
 importFrom(grDevices,col2rgb)
 importFrom(magrittr,"%>%")
 importFrom(officer,fp_border)
+importFrom(scales,seq_gradient_pal)
+importFrom(scales,show_col)
 importFrom(stats,coef)
 importFrom(stats,confint.default)
 importFrom(stats,formula)
