--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: ztable
 Title: Zebra-Striped Tables in LaTeX and HTML Formats
-Version: 0.1.9
+Version: 0.2.0
 Authors@R: person("Keon-Woong","Moon", email="cardiomoon@gmail.com",
     role=c("aut", "cre"))
 Description: Makes zebra-striped tables (tables with alternating row colors)
@@ -17,7 +17,8 @@ Imports:
     RColorBrewer,
     flextable,
     officer,
-    moonBook
+    moonBook,
+    scales
 Suggests:
     MASS,
     survival,
