--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,6 +41,7 @@ export(hlines)
 export(isGroupCol)
 export(makeHeatmap)
 export(myhtmlStyle)
+export(normalize2)
 export(palette2colors)
 export(parallelTables)
 export(printHTMLHead)
