--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,6 +50,8 @@ export(roundDf)
 export(spanCol)
 export(spanRow)
 export(update_ztable)
+export(validColor)
+export(validColor2)
 export(vline2align)
 export(vlines)
 export(ztable)
@@ -68,6 +70,7 @@ importFrom(flextable,padding)
 importFrom(flextable,regulartable)
 importFrom(flextable,set_header_df)
 importFrom(grDevices,col2rgb)
+importFrom(grDevices,colors)
 importFrom(magrittr,"%>%")
 importFrom(officer,fp_border)
 importFrom(scales,seq_gradient_pal)
