--- a/NAMESPACE
+++ b/NAMESPACE
@@ -62,8 +62,11 @@ importFrom(RColorBrewer,brewer.pal.info)
 importFrom(flextable,align)
 importFrom(flextable,bg)
 importFrom(flextable,border)
+importFrom(flextable,border_remove)
 importFrom(flextable,color)
 importFrom(flextable,delete_part)
+importFrom(flextable,hline)
+importFrom(flextable,hline_top)
 importFrom(flextable,merge_at)
 importFrom(flextable,merge_h)
 importFrom(flextable,padding)
