--- a/NAMESPACE
+++ b/NAMESPACE
@@ -49,6 +49,7 @@ export(printLatexHead)
 export(roundDf)
 export(spanCol)
 export(spanRow)
+export(totalCol)
 export(totalLeft)
 export(update_ztable)
 export(validColor)
