--- a/NAMESPACE
+++ b/NAMESPACE
@@ -78,6 +78,7 @@ importFrom(grDevices,col2rgb)
 importFrom(grDevices,colors)
 importFrom(magrittr,"%>%")
 importFrom(officer,fp_border)
+importFrom(rstudioapi,viewer)
 importFrom(scales,seq_gradient_pal)
 importFrom(scales,show_col)
 importFrom(stats,coef)
@@ -87,3 +88,4 @@ importFrom(stringr,fixed)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_flatten)
 importFrom(stringr,str_remove_all)
+importFrom(utils,browseURL)
